frontend/mobile/fix/slug-page/menu-overlaps-on-slider

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -322,3 +322,7 @@ body.on-slug-page .vitrail-list-wrapper{
 body.index-page{
     @apply overflow-hidden;
 }
+
+#floating-title-container{
+    @apply max-md:hidden max-md:pointer-events-none;
+}
